[tool.poetry]
name = "django-rapidapi"
version = "0.1.0-dev1"
description = "Django API extension"
authors = ["Anton Ruhlov <antonruhlov@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/antonrh/django-apirouter"
keywords = ["django", "api", "rest"]
packages = [
    { include = "rapidapi", from = "." },
]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.1"
pydantic = "^1.6.1"
mkdocs = {version = "^1.1.2", extras = ["docs"]}
mkdocs-material = {version = "^6.0.2", extras = ["docs"]}

[tool.poetry.dev-dependencies]
isort = "^5.6.4"
black = "^20.8b1"
mypy = "^0.790"
flake8 = "^3.8.4"
pytest = "^6.1.1"
pytest-cov = "^2.10.1"
pytest-django = "^4.0.0"
bump2version = "^1.0.1"
safety = "^1.9.0"

[tool.isort]
profile = "black"
combine_as_imports = true
src_paths = ["rapidapi", "tests"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
